@@ -1,4 +1,5 @@
 0.9.1
+   - bug [9785] "dk.dbc.opensearch.common.types.HarvestType har overflødig getName() metode"
    - bug [9480] "Vi skal ikke have funktionelletest med i oversigten over unittestede filer"
    - bug [9629] "Create work:* objects in fedora."
    - bug [9780] "setup_postgres_check_fedora.py fejler pga manglende sql fil"
